# azure-codex

./: .codespellignore  .codespellrc  .gitignore  AGENTS.md  AZURE_FORK_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTINUITY.md  README.md  justfile
.claude/commands/: api-design.md  azure-openai.md  code-review.md  debug.md  docs.md  git-workflow.md  performance.md  refactor.md  security.md  test-writer.md
.codex/skills/azure-openai/: SKILL.md
.codex/skills/code-review/: SKILL.md
.codex/skills/debug/: SKILL.md
.codex/skills/git-workflow/: SKILL.md
.codex/skills/merge-upstream/: SKILL.md
.codex/skills/performance/: SKILL.md
.codex/skills/security/: SKILL.md
.github/workflows/: release-npm.yml  rust-ci.yml  rust-release-prepare.yml  rust-release.yml  sync-upstream.yml
codex-rs/: CONTINUITY.md  Cargo.toml  deny.toml  rust-toolchain.toml
codex-rs/.cargo/: config.toml
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/branding/: Cargo.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/lmstudio/: Cargo.toml
codex-rs/rmcp-client/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui2/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
docs/: PHASE2_AZURE_ENTRA_ID_SPEC.md  config.md  example-config.md  slash_commands.md
npm/: package.json
scripts/: TESTING.md  quick-test.sh  test-codex.ps1  test-codex.sh
test-config/: config.toml
(+311 files in other folders)
